tests/errors/wrong_start_pin.nm

component Foo {
    pin FOO: input = 0;
    pin BAR: input = 1;
}